# pre_commit_python_example

./: .pre-commit-config.yaml  main.py  pyproject.toml
