[tool.poetry]
name = "pre-commit-python-example"
version = "0.1.0"
description = "a python tutorial for pre-commiting"
authors = ["Fattoumi Tayssir <fattoumitaycir@gmail.com>"]
readme = "README.md"
packages = [{include = "pre_commit_python_example"}]

[tool.poetry.dependencies]
python = "3.10.2"
pre-commit = "^2.20.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
